--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
                 <a href="#" class="header__option--link">
                     <span class="handbag">
                     <i class="fas fa-bag-shopping"></i>
-                    <sup>2</sup>
                 </span>
                 </a>
                 <a href="#" class="header__option--link">
@@ -51,7 +50,8 @@
         <div class="principale__img">
             <div class="principale__img--description">
                 <div class="texte">
-                <h1>---------FLOWER & GIFT <br>GET UP TO 75%</h1>
+                <span><h2>FLOWER & GIFT</h2></span>
+                <h1>GET UP TO 75%</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         <br> eligendi provident perferendis molestias!</p>     
                     <button class="imgbtn">Shop Now</button>  
@@ -129,10 +129,8 @@
           </div>
 
           <div class="produit__img">
-
                 <img src="images/img14.jpg" alt="Image 14">
                 <img src="images/img15.jpg" alt="Image 15">
-
           </div>
     </section>
 
@@ -309,11 +307,20 @@
         <div class="col">
           <h4>ABOUT OUR SHOP</h4>
           <ul>
-            <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit,  Aut quia vel amet doloremque. </li>
+            <li>Lorem ipsum dolor sit, amet consectetur. </li>
             <li>Liens</li>
             <li>Liens</li>
           </ul>
+        </div >
+        <div class="foot">
+        <p > &copy; 2023- JUST FOR YOU.</p>
+        <div class="reseau">
+          <i class="fab fa-facebook-f"></i>
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-pinterest-p"></i>
+          <i class="fab fa-instagram"></i>
         </div>
+      </div>
       </div>
     </footer>
     
