--- a/index.html
+++ b/index.html
@@ -49,13 +49,15 @@
     <section class="principale">
         <div class="principale__img">
             <div class="principale__img--description">
-                <div class="texte">
-                <span><h2>FLOWER & GIFT</h2></span>
+              <div class="texte">
+                <span>
+                  <h2>FLOWER & GIFT</h2>
+                </span>
                 <h1>GET UP TO 75%</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        <br> eligendi provident perferendis molestias!</p>     
-                    <button class="imgbtn">Shop Now</button>  
-                </div>     
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p>eligendi provident perferendis molestias!</p><br>
+                <button class="imgbtn">Shop Now</button>  
+              </div>
             </div>
 
            <img src="images/principale.jpg" alt="principale">
@@ -81,53 +83,108 @@
             </ul>
         </div>
 
-        <div class="produit__image-grid">
-            <div class="image-item">
-              <img src="images/img10.png" alt="Image 10">
-              <div class="stars">
-                <span class="star"><i class="fa-regular fa-star"></i></span>
-                <span class="star"><i class="fa-regular fa-star"></i></span>
-                <span class="star"><i class="fa-regular fa-star"></i></span>
-                <span class="star"><i class="fa-regular fa-star"></i></span>
-                <span class="star"><i class="fa-regular fa-star"></i></span>
-              </div><br>
-              <a href="">PINK FLOWER TREE</a>
-            </div>
-            <div class="image-item">
-              <img src="images/img11.png" alt="Image 11">
-              <div class="stars">
-                <span class="star"><i class="fa-regular fa-star"></i></span>
-                <span class="star"><i class="fa-regular fa-star"></i></span>
-                <span class="star"><i class="fa-regular fa-star"></i></span>
-                <span class="star"><i class="fa-regular fa-star"></i></span>
-                <span class="star"><i class="fa-regular fa-star"></i></span>
-              </div><br>
-              <a href="">PREMIUM JOYFUL</a>
-            </div>
-            <div class="image-item">
-              <img src="images/img12.png" alt="Image 12">
-              <div class="stars">
-                <span class="star"><i class="fa-regular fa-star"></i></span>
-                <span class="star"><i class="fa-regular fa-star"></i></span>
-                <span class="star"><i class="fa-regular fa-star"></i></span>
-                <span class="star"><i class="fa-regular fa-star"></i></span>
-                <span class="star"><i class="fa-regular fa-star"></i></span>
-              </div><br>
-              <a href="">THE WHITE ROSE</a>
-            </div>
-            <div class="image-item">
-              <img src="images/img13.png" alt="Image 13">
-              <div class="stars">
-                <span class="star"><i class="fa-regular fa-star"></i></span>
-                <span class="star"><i class="fa-regular fa-star"></i></span>
-                <span class="star"><i class="fa-regular fa-star"></i></span>
-                <span class="star"><i class="fa-regular fa-star"></i></span>
-                <span class="star"><i class="fa-regular fa-star"></i></span>
-              </div><br>
-              <a href="">RED ROSE BOUQUET</a>
+          <div class="topp__map-slider">
+            <div class="slider">
+              <div class="slide"><img src="images/img10.png" alt="image 10">
+                <div class="search-icons">
+                  <i class="fa fa-search"></i>
+                  <i class="fas fa-bag-shopping"></i>
+                  <i class="fa-solid fa-shuffle"></i>
+                </div>
+                <div class="stars">
+                  <span class="star"><i class="fa-regular fa-star"></i></span>
+                  <span class="star"><i class="fa-regular fa-star"></i></span>
+                  <span class="star"><i class="fa-regular fa-star"></i></span>
+                  <span class="star"><i class="fa-regular fa-star"></i></span>
+                  <span class="star"><i class="fa-regular fa-star"></i></span>
+                </div><br>
+                <a href="">PINK FLOWER TREE</a><br><br>
+                <p> <hr>$16.00  <del>$19.00</del></p>
+              </div>
+              <div class="slide"><img src="images/img11.png" alt="image 11">
+                <div class="search-icons">
+                  <i class="fa fa-search"></i>
+                  <i class="fas fa-bag-shopping"></i>
+                  <i class="fa-solid fa-shuffle"></i>
+                </div>
+                <div class="stars">
+                  <span class="star"><i class="fa-regular fa-star"></i></span>
+                  <span class="star"><i class="fa-regular fa-star"></i></span>
+                  <span class="star"><i class="fa-regular fa-star"></i></span>
+                  <span class="star"><i class="fa-regular fa-star"></i></span>
+                  <span class="star"><i class="fa-regular fa-star"></i></span>
+                </div><br>
+                <a href="">PREMIUM JOYFUL</a><br><br>
+                <p> <hr>$16.00  <del>$19.00</del></p>
+              </div>
+              <div class="slide"><img src="images/img12.png" alt="image 12">
+                <div class="search-icons">
+                  <i class="fa fa-search"></i>
+                  <i class="fas fa-bag-shopping"></i>
+                  <i class="fa-solid fa-shuffle"></i>
+                </div>
+                <div class="stars">
+                  <span class="star"><i class="fa-regular fa-star"></i></span>
+                  <span class="star"><i class="fa-regular fa-star"></i></span>
+                  <span class="star"><i class="fa-regular fa-star"></i></span>
+                  <span class="star"><i class="fa-regular fa-star"></i></span>
+                  <span class="star"><i class="fa-regular fa-star"></i></span>
+                </div><br>
+                <a href="">THE WHITE ROSE</a><br><br>
+                <p> <hr>$16.00  <del>$19.00</del></p>
+              </div>
+              <div class="slide"><img src="images/img13.png" alt="image 13">
+                <div class="search-icons">
+                  <i class="fa fa-search"></i>
+                  <i class="fas fa-bag-shopping"></i>
+                  <i class="fa-solid fa-shuffle"></i>
+                </div>
+                <div class="stars">
+                  <span class="star"><i class="fa-regular fa-star"></i></span>
+                  <span class="star"><i class="fa-regular fa-star"></i></span>
+                  <span class="star"><i class="fa-regular fa-star"></i></span>
+                  <span class="star"><i class="fa-regular fa-star"></i></span>
+                  <span class="star"><i class="fa-regular fa-star"></i></span>
+                </div><br>
+                <a href="">PINK FLOWER TREE</a><br><br>
+                <p> <hr>$16.00  <del>$19.00</del></p>
+              </div>
+              <div class="slide">
+                <img src="images/img16.png" alt="image 16">
+                <div class="search-icons">
+                  <i class="fa fa-search"></i>
+                  <i class="fas fa-bag-shopping"></i>
+                  <i class="fa-solid fa-shuffle"></i>
+                </div>
+                <div class="stars">
+                  <span class="star"><i class="fa-regular fa-star"></i></span>
+                  <span class="star"><i class="fa-regular fa-star"></i></span>
+                  <span class="star"><i class="fa-regular fa-star"></i></span>
+                  <span class="star"><i class="fa-regular fa-star"></i></span>
+                  <span class="star"><i class="fa-regular fa-star"></i></span>
+                </div><br>
+                <a href="">THE WHITE ROSE</a><br><br>
+                <p> <hr>$16.00  <del>$19.00</del></p>
+              </div>
+              <div class="slide">
+                <img src="images/img17.png" alt="image 17">
+                <div class="search-icons">
+                  <i class="fa fa-search"></i>
+                  <i class="fas fa-bag-shopping"></i>
+                  <i class="fa-solid fa-shuffle"></i>
+                </div>
+                <div class="stars">
+                  <span class="star"><i class="fa-regular fa-star"></i></span>
+                  <span class="star"><i class="fa-regular fa-star"></i></span>
+                  <span class="star"><i class="fa-regular fa-star"></i></span>
+                  <span class="star"><i class="fa-regular fa-star"></i></span>
+                  <span class="star"><i class="fa-regular fa-star"></i></span>
+                </div><br>
+                <a href="">PINK FLOWER TREE</a><br><br>
+                <p> <hr>$16.00  <del>$19.00</del></p>
+              </div>
             </div>
           </div>
-
           <div class="produit__img">
                 <img src="images/img14.jpg" alt="Image 14">
                 <img src="images/img15.jpg" alt="Image 15">
@@ -142,6 +199,11 @@
         <div class="topp__map-slider">
           <div class="slider">
             <div class="slide"><img src="images/img16.png" alt="image 16">
+              <div class="search-icons">
+                <i class="fa fa-search"></i>
+                <i class="fas fa-bag-shopping"></i>
+                <i class="fa-solid fa-shuffle"></i>
+              </div>
               <div class="stars">
                 <span class="star"><i class="fa-regular fa-star"></i></span>
                 <span class="star"><i class="fa-regular fa-star"></i></span>
@@ -149,9 +211,15 @@
                 <span class="star"><i class="fa-regular fa-star"></i></span>
                 <span class="star"><i class="fa-regular fa-star"></i></span>
               </div><br>
-              <a href="">PINK FLOWER TREE</a>
+              <a href="">PINK FLOWER TREE</a><br><br>
+              <p> <hr>$16.00  <del>$19.00</del></p>
             </div>
             <div class="slide"><img src="images/img17.png" alt="image 17">
+              <div class="search-icons">
+                <i class="fa fa-search"></i>
+                <i class="fas fa-bag-shopping"></i>
+                <i class="fa-solid fa-shuffle"></i>
+              </div>
               <div class="stars">
                 <span class="star"><i class="fa-regular fa-star"></i></span>
                 <span class="star"><i class="fa-regular fa-star"></i></span>
@@ -159,8 +227,15 @@
                 <span class="star"><i class="fa-regular fa-star"></i></span>
                 <span class="star"><i class="fa-regular fa-star"></i></span>
               </div><br>
-              <a href="">PREMIUM JOYFUL</a></div>
+              <a href="">PREMIUM JOYFUL</a><br><br>
+              <p> <hr>$16.00  <del>$19.00</del></p>
+            </div>
             <div class="slide"><img src="images/img18.png" alt="image 18">
+              <div class="search-icons">
+                <i class="fa fa-search"></i>
+                <i class="fas fa-bag-shopping"></i>
+                <i class="fa-solid fa-shuffle"></i>
+              </div>
               <div class="stars">
                 <span class="star"><i class="fa-regular fa-star"></i></span>
                 <span class="star"><i class="fa-regular fa-star"></i></span>
@@ -168,8 +243,15 @@
                 <span class="star"><i class="fa-regular fa-star"></i></span>
                 <span class="star"><i class="fa-regular fa-star"></i></span>
               </div><br>
-              <a href="">THE WHITE ROSE</a></div>
+              <a href="">THE WHITE ROSE</a><br><br>
+              <p> <hr>$16.00  <del>$19.00</del></p>
+            </div>
             <div class="slide"><img src="images/img19.png" alt="image 19">
+              <div class="search-icons">
+                <i class="fa fa-search"></i>
+                <i class="fas fa-bag-shopping"></i>
+                <i class="fa-solid fa-shuffle"></i>
+              </div>
               <div class="stars">
                 <span class="star"><i class="fa-regular fa-star"></i></span>
                 <span class="star"><i class="fa-regular fa-star"></i></span>
@@ -177,9 +259,16 @@
                 <span class="star"><i class="fa-regular fa-star"></i></span>
                 <span class="star"><i class="fa-regular fa-star"></i></span>
               </div><br>
-              <a href="">PINK FLOWER TREE</a></div>
+              <a href="">PINK FLOWER TREE</a><br><br>
+              <p> <hr>$16.00  <del>$19.00</del></p>
+            </div>
             <div class="slide">
               <img src="images/img20.png" alt="image 20">
+              <div class="search-icons">
+                <i class="fa fa-search"></i>
+                <i class="fas fa-bag-shopping"></i>
+                <i class="fa-solid fa-shuffle"></i>
+              </div>
               <div class="stars">
                 <span class="star"><i class="fa-regular fa-star"></i></span>
                 <span class="star"><i class="fa-regular fa-star"></i></span>
@@ -187,9 +276,16 @@
                 <span class="star"><i class="fa-regular fa-star"></i></span>
                 <span class="star"><i class="fa-regular fa-star"></i></span>
               </div><br>
-              <a href="">THE WHITE ROSE</a></div>
+              <a href="">THE WHITE ROSE</a><br><br>
+              <p> <hr>$16.00  <del>$19.00</del></p>
+            </div>
             <div class="slide">
               <img src="images/img21.png" alt="image 21">
+              <div class="search-icons">
+                <i class="fa fa-search"></i>
+                <i class="fas fa-bag-shopping"></i>
+                <i class="fa-solid fa-shuffle"></i>
+              </div>
               <div class="stars">
                 <span class="star"><i class="fa-regular fa-star"></i></span>
                 <span class="star"><i class="fa-regular fa-star"></i></span>
@@ -197,7 +293,8 @@
                 <span class="star"><i class="fa-regular fa-star"></i></span>
                 <span class="star"><i class="fa-regular fa-star"></i></span>
               </div><br>
-              <a href="">PINK FLOWER TREE</a></div>
+              <a href="">PINK FLOWER TREE</a><br><br>
+              <p> <hr>$16.00  <del>$19.00</del></p></div>
           </div>
         </div>
 
