--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <div class="site-logo">
                 <a href="index.html"><img src="images/logo.png" alt="Logo"></a>
             </div>
+            
             <div class="header__menu">
             <ul>
                 <li><a href="#">HOME</a></li>
@@ -42,6 +43,19 @@
                 <a href="#" class="header__option--link">
                 <h6>Your Cart <br><span class="cash">$89.25</span></h6>
                 </a>  
+                <div class="cache">
+                  <input type="checkbox" id="check">
+                  <label for="check" class="checkbutton"><i class="fas fa-bars"></i></label>
+                  <ul class="menu-items">
+                    <li class="menu-item"><a href="#">HOME</a></li>
+                    <li class="menu-item"><a href="#">PAGE</a></li>
+                    <li class="menu-item"><a href="#">SHOP</a></li>
+                    <li class="menu-item"><a href="#">PORTFOLIO</a></li>
+                    <li class="menu-item"><a href="#">NEWS</a></li>
+                    <li class="menu-item"><a href="#">CONTACT</a></li>
+
+                  </ul>
+                  </div>
          </div>
         </nav>
     </header>
