correction du trait sous les images et des icones aux survols

--- a/index.html
+++ b/index.html
@@ -99,12 +99,14 @@
 
           <div class="topp__map-slider">
             <div class="slider">
-              <div class="slide"><img src="images/img10.png" alt="image 10">
+              <div class="slide">
+                <div class="top-card">
+                <img src="images/img10.png" alt="image 10">
                 <div class="search-icons">
                   <i class="fa fa-search"></i>
                   <i class="fas fa-bag-shopping"></i>
                   <i class="fa-solid fa-shuffle"></i>
-                </div>
+                </div></div>
                 <div class="stars">
                   <span class="star"><i class="fa-regular fa-star"></i></span>
                   <span class="star"><i class="fa-regular fa-star"></i></span>
@@ -113,14 +115,17 @@
                   <span class="star"><i class="fa-regular fa-star"></i></span>
                 </div><br>
                 <a href="">PINK FLOWER TREE</a><br><br>
-                <p> <hr>$16.00  <del>$19.00</del></p>
+                <p> <hr><br>$16.00  <del>$19.00</del></p><br><br>
               </div>
-              <div class="slide"><img src="images/img11.png" alt="image 11">
+              <div class="slide">
+                <div class="top-card">
+                <img src="images/img11.png" alt="image 11">
                 <div class="search-icons">
                   <i class="fa fa-search"></i>
                   <i class="fas fa-bag-shopping"></i>
                   <i class="fa-solid fa-shuffle"></i>
                 </div>
+              </div>
                 <div class="stars">
                   <span class="star"><i class="fa-regular fa-star"></i></span>
                   <span class="star"><i class="fa-regular fa-star"></i></span>
@@ -129,14 +134,17 @@
                   <span class="star"><i class="fa-regular fa-star"></i></span>
                 </div><br>
                 <a href="">PREMIUM JOYFUL</a><br><br>
-                <p> <hr>$16.00  <del>$19.00</del></p>
+                <p> <hr><br>$16.00  <del>$19.00</del></p><br><br>
               </div>
-              <div class="slide"><img src="images/img12.png" alt="image 12">
+              <div class="slide">
+                <div class="top-card">
+                <img src="images/img12.png" alt="image 12">
                 <div class="search-icons">
                   <i class="fa fa-search"></i>
                   <i class="fas fa-bag-shopping"></i>
                   <i class="fa-solid fa-shuffle"></i>
                 </div>
+              </div>
                 <div class="stars">
                   <span class="star"><i class="fa-regular fa-star"></i></span>
                   <span class="star"><i class="fa-regular fa-star"></i></span>
@@ -145,14 +153,17 @@
                   <span class="star"><i class="fa-regular fa-star"></i></span>
                 </div><br>
                 <a href="">THE WHITE ROSE</a><br><br>
-                <p> <hr>$16.00  <del>$19.00</del></p>
+                <p> <hr><br>$16.00  <del>$19.00</del></p><br><br>
               </div>
-              <div class="slide"><img src="images/img13.png" alt="image 13">
+              <div class="slide">
+                <div class="top-card">
+                <img src="images/img13.png" alt="image 13">
                 <div class="search-icons">
                   <i class="fa fa-search"></i>
                   <i class="fas fa-bag-shopping"></i>
                   <i class="fa-solid fa-shuffle"></i>
                 </div>
+              </div>
                 <div class="stars">
                   <span class="star"><i class="fa-regular fa-star"></i></span>
                   <span class="star"><i class="fa-regular fa-star"></i></span>
@@ -161,15 +172,17 @@
                   <span class="star"><i class="fa-regular fa-star"></i></span>
                 </div><br>
                 <a href="">PINK FLOWER TREE</a><br><br>
-                <p> <hr>$16.00  <del>$19.00</del></p>
+                <p> <hr><br>$16.00  <del>$19.00</del></p><br><br>
               </div>
               <div class="slide">
+                <div class="top-card">
                 <img src="images/img16.png" alt="image 16">
                 <div class="search-icons">
                   <i class="fa fa-search"></i>
                   <i class="fas fa-bag-shopping"></i>
                   <i class="fa-solid fa-shuffle"></i>
                 </div>
+              </div>
                 <div class="stars">
                   <span class="star"><i class="fa-regular fa-star"></i></span>
                   <span class="star"><i class="fa-regular fa-star"></i></span>
@@ -178,15 +191,17 @@
                   <span class="star"><i class="fa-regular fa-star"></i></span>
                 </div><br>
                 <a href="">THE WHITE ROSE</a><br><br>
-                <p> <hr>$16.00  <del>$19.00</del></p>
+                <p> <hr><br>$16.00  <del>$19.00</del></p><br><br>
               </div>
               <div class="slide">
+                <div class="top-card">
                 <img src="images/img17.png" alt="image 17">
                 <div class="search-icons">
                   <i class="fa fa-search"></i>
                   <i class="fas fa-bag-shopping"></i>
                   <i class="fa-solid fa-shuffle"></i>
                 </div>
+              </div>
                 <div class="stars">
                   <span class="star"><i class="fa-regular fa-star"></i></span>
                   <span class="star"><i class="fa-regular fa-star"></i></span>
@@ -195,7 +210,7 @@
                   <span class="star"><i class="fa-regular fa-star"></i></span>
                 </div><br>
                 <a href="">PINK FLOWER TREE</a><br><br>
-                <p> <hr>$16.00  <del>$19.00</del></p>
+                <p> <hr><br>$16.00  <del>$19.00</del></p><br><br>
               </div>
             </div>
           </div>
@@ -212,12 +227,15 @@
 
         <div class="topp__map-slider">
           <div class="slider">
-            <div class="slide"><img src="images/img16.png" alt="image 16">
+            <div class="slide">
+              <div class="top-card">
+              <img src="images/img16.png" alt="image 16">
               <div class="search-icons">
                 <i class="fa fa-search"></i>
                 <i class="fas fa-bag-shopping"></i>
                 <i class="fa-solid fa-shuffle"></i>
               </div>
+            </div>
               <div class="stars">
                 <span class="star"><i class="fa-regular fa-star"></i></span>
                 <span class="star"><i class="fa-regular fa-star"></i></span>
@@ -226,14 +244,17 @@
                 <span class="star"><i class="fa-regular fa-star"></i></span>
               </div><br>
               <a href="">PINK FLOWER TREE</a><br><br>
-              <p> <hr>$16.00  <del>$19.00</del></p>
+              <p> <hr><br>$16.00  <del>$19.00</del></p><br><br>
             </div>
-            <div class="slide"><img src="images/img17.png" alt="image 17">
+            <div class="slide">
+              <div class="top-card">
+              <img src="images/img17.png" alt="image 17">
               <div class="search-icons">
                 <i class="fa fa-search"></i>
                 <i class="fas fa-bag-shopping"></i>
                 <i class="fa-solid fa-shuffle"></i>
               </div>
+            </div>
               <div class="stars">
                 <span class="star"><i class="fa-regular fa-star"></i></span>
                 <span class="star"><i class="fa-regular fa-star"></i></span>
@@ -242,14 +263,17 @@
                 <span class="star"><i class="fa-regular fa-star"></i></span>
               </div><br>
               <a href="">PREMIUM JOYFUL</a><br><br>
-              <p> <hr>$16.00  <del>$19.00</del></p>
+              <p> <hr><br>$16.00  <del>$19.00</del></p><br><br>
             </div>
-            <div class="slide"><img src="images/img18.png" alt="image 18">
+            <div class="slide">
+              <div class="top-card">
+              <img src="images/img18.png" alt="image 18">
               <div class="search-icons">
                 <i class="fa fa-search"></i>
                 <i class="fas fa-bag-shopping"></i>
                 <i class="fa-solid fa-shuffle"></i>
               </div>
+            </div>
               <div class="stars">
                 <span class="star"><i class="fa-regular fa-star"></i></span>
                 <span class="star"><i class="fa-regular fa-star"></i></span>
@@ -258,14 +282,17 @@
                 <span class="star"><i class="fa-regular fa-star"></i></span>
               </div><br>
               <a href="">THE WHITE ROSE</a><br><br>
-              <p> <hr>$16.00  <del>$19.00</del></p>
+              <p> <hr><br>$16.00  <del>$19.00</del></p><br><br>
             </div>
-            <div class="slide"><img src="images/img19.png" alt="image 19">
+            <div class="slide">
+              <div class="top-card">
+              <img src="images/img19.png" alt="image 19">
               <div class="search-icons">
                 <i class="fa fa-search"></i>
                 <i class="fas fa-bag-shopping"></i>
                 <i class="fa-solid fa-shuffle"></i>
               </div>
+            </div>
               <div class="stars">
                 <span class="star"><i class="fa-regular fa-star"></i></span>
                 <span class="star"><i class="fa-regular fa-star"></i></span>
@@ -274,15 +301,17 @@
                 <span class="star"><i class="fa-regular fa-star"></i></span>
               </div><br>
               <a href="">PINK FLOWER TREE</a><br><br>
-              <p> <hr>$16.00  <del>$19.00</del></p>
+              <p> <hr><br>$16.00  <del>$19.00</del></p><br><br>
             </div>
             <div class="slide">
+              <div class="top-card">
               <img src="images/img20.png" alt="image 20">
               <div class="search-icons">
                 <i class="fa fa-search"></i>
                 <i class="fas fa-bag-shopping"></i>
                 <i class="fa-solid fa-shuffle"></i>
               </div>
+            </div>
               <div class="stars">
                 <span class="star"><i class="fa-regular fa-star"></i></span>
                 <span class="star"><i class="fa-regular fa-star"></i></span>
@@ -291,15 +320,17 @@
                 <span class="star"><i class="fa-regular fa-star"></i></span>
               </div><br>
               <a href="">THE WHITE ROSE</a><br><br>
-              <p> <hr>$16.00  <del>$19.00</del></p>
+              <p> <hr><br>$16.00  <del>$19.00</del></p><br><br>
             </div>
             <div class="slide">
+              <div class="top-card">
               <img src="images/img21.png" alt="image 21">
               <div class="search-icons">
                 <i class="fa fa-search"></i>
                 <i class="fas fa-bag-shopping"></i>
                 <i class="fa-solid fa-shuffle"></i>
               </div>
+            </div>
               <div class="stars">
                 <span class="star"><i class="fa-regular fa-star"></i></span>
                 <span class="star"><i class="fa-regular fa-star"></i></span>
@@ -308,7 +339,8 @@
                 <span class="star"><i class="fa-regular fa-star"></i></span>
               </div><br>
               <a href="">PINK FLOWER TREE</a><br><br>
-              <p> <hr>$16.00  <del>$19.00</del></p></div>
+              <p> <hr><br>$16.00  <del>$19.00</del></p><br><br>
+            </div>
           </div>
         </div>
 
