--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>new</title>
 </head>
 <body>
+
+  
     <header>
         <nav>
             <div class="site-logo">
@@ -37,11 +39,11 @@
                 </a>
                 <a href="#" class="header__option--link">
                     <span class="handbag">
-                    <i class="fas fa-bag-shopping"></i>
+                    <i class="fas fa-bag-shopping" id="cart-icon"></i>
                 </span>
                 </a>
                 <a href="#" class="header__option--link">
-                <h6>Your Cart <br><span class="cash">$89.25</span></h6>
+                <h6 id="cart-text">Your Cart <br><span class="cash">$89.25</span></h6>
                 </a>  
                 <div class="cache">
                   <input type="checkbox" id="check">
@@ -55,7 +57,34 @@
                     <li class="menu-item"><a href="#">CONTACT</a></li>
 
                   </ul>
+                </div>
+                <div class="cart">
+                  <h2 class="cart-title">Cart</h2>
+
+                  <div class="cart-content">
+                    <div class="cart-box">
+                      <img src="images/img10.png" alt="cart-img" class="cart-img">
+                      <div class="detail-box">
+                        <div class="cart-product-title">PINK FLOWER TREE</div>
+                        <div class="cart-price">$16</div>
+                        <input type="number" value="1" class="cart-quantity">
+                      </div>
+                      <i class="fa-regular fa-trash-can cart-remove"></i>
+                    </div>
                   </div>
+                  <div class="total">
+                    <div class="total-title">Total:</div>
+                    <div class="total-price">$0</div>
+                  </div>
+
+                  <div class="bt">
+                  <button class="btn-view">VIEW CART</button>
+                  <button class="btn-checkout">CHECKOUT</button>
+                  </div>
+
+                  <i class="fa-solid fa-x" id="close-cart"></i>
+
+                </div>
          </div>
         </nav>
     </header>
@@ -115,7 +144,7 @@
                   <span class="star"><i class="fa-regular fa-star"></i></span>
                 </div><br>
                 <a href="">PINK FLOWER TREE</a><br><br>
-                <p> <hr><br>$16.00  <del>$19.00</del></p><br><br>
+                <span class="price"><hr><br>$16.00  <del>$19.00</del></span> <br><br>
               </div>
               <div class="slide">
                 <div class="top-card">
@@ -134,7 +163,7 @@
                   <span class="star"><i class="fa-regular fa-star"></i></span>
                 </div><br>
                 <a href="">PREMIUM JOYFUL</a><br><br>
-                <p> <hr><br>$16.00  <del>$19.00</del></p><br><br>
+                <span class="price"><hr><br>$16.00  <del>$19.00</del></span> <br><br>
               </div>
               <div class="slide">
                 <div class="top-card">
@@ -153,7 +182,7 @@
                   <span class="star"><i class="fa-regular fa-star"></i></span>
                 </div><br>
                 <a href="">THE WHITE ROSE</a><br><br>
-                <p> <hr><br>$16.00  <del>$19.00</del></p><br><br>
+                <span class="price"><hr><br>$16.00  <del>$19.00</del></span> <br><br>
               </div>
               <div class="slide">
                 <div class="top-card">
@@ -172,7 +201,7 @@
                   <span class="star"><i class="fa-regular fa-star"></i></span>
                 </div><br>
                 <a href="">PINK FLOWER TREE</a><br><br>
-                <p> <hr><br>$16.00  <del>$19.00</del></p><br><br>
+                <span class="price"><hr><br>$16.00  <del>$19.00</del></span><br><br>
               </div>
               <div class="slide">
                 <div class="top-card">
@@ -191,7 +220,7 @@
                   <span class="star"><i class="fa-regular fa-star"></i></span>
                 </div><br>
                 <a href="">THE WHITE ROSE</a><br><br>
-                <p> <hr><br>$16.00  <del>$19.00</del></p><br><br>
+                <span class="price"><hr><br>$16.00  <del>$19.00</del></span> <br><br>
               </div>
               <div class="slide">
                 <div class="top-card">
@@ -210,7 +239,7 @@
                   <span class="star"><i class="fa-regular fa-star"></i></span>
                 </div><br>
                 <a href="">PINK FLOWER TREE</a><br><br>
-                <p> <hr><br>$16.00  <del>$19.00</del></p><br><br>
+                <span class="price"><hr><br>$16.00  <del>$19.00</del></span><br><br>
               </div>
             </div>
           </div>
@@ -244,7 +273,7 @@
                 <span class="star"><i class="fa-regular fa-star"></i></span>
               </div><br>
               <a href="">PINK FLOWER TREE</a><br><br>
-              <p> <hr><br>$16.00  <del>$19.00</del></p><br><br>
+              <span class="price"><hr><br>$16.00  <del>$19.00</del></span> <br><br>
             </div>
             <div class="slide">
               <div class="top-card">
@@ -263,7 +292,7 @@
                 <span class="star"><i class="fa-regular fa-star"></i></span>
               </div><br>
               <a href="">PREMIUM JOYFUL</a><br><br>
-              <p> <hr><br>$16.00  <del>$19.00</del></p><br><br>
+              <span class="price"><hr><br>$16.00  <del>$19.00</del></span> <br><br>
             </div>
             <div class="slide">
               <div class="top-card">
@@ -282,7 +311,7 @@
                 <span class="star"><i class="fa-regular fa-star"></i></span>
               </div><br>
               <a href="">THE WHITE ROSE</a><br><br>
-              <p> <hr><br>$16.00  <del>$19.00</del></p><br><br>
+              <span class="price"><hr><br>$16.00  <del>$19.00</del></span> <br><br>
             </div>
             <div class="slide">
               <div class="top-card">
@@ -301,7 +330,7 @@
                 <span class="star"><i class="fa-regular fa-star"></i></span>
               </div><br>
               <a href="">PINK FLOWER TREE</a><br><br>
-              <p> <hr><br>$16.00  <del>$19.00</del></p><br><br>
+              <span class="price"><hr><br>$16.00  <del>$19.00</del></span> <br><br>
             </div>
             <div class="slide">
               <div class="top-card">
@@ -320,7 +349,7 @@
                 <span class="star"><i class="fa-regular fa-star"></i></span>
               </div><br>
               <a href="">THE WHITE ROSE</a><br><br>
-              <p> <hr><br>$16.00  <del>$19.00</del></p><br><br>
+              <span class="price"><hr><br>$16.00  <del>$19.00</del></span> <br><br>
             </div>
             <div class="slide">
               <div class="top-card">
@@ -339,7 +368,7 @@
                 <span class="star"><i class="fa-regular fa-star"></i></span>
               </div><br>
               <a href="">PINK FLOWER TREE</a><br><br>
-              <p> <hr><br>$16.00  <del>$19.00</del></p><br><br>
+              <span class="price"><hr><br>$16.00  <del>$19.00</del></span><br><br>
             </div>
           </div>
         </div>
@@ -467,6 +496,8 @@
       </div>
     </footer>
     
-    
+    <!-- js link -->
+
+  <script src="dist/css/js/script.js"></script>
 </body>
 </html>
